refactor(invoiceSummary): enhance view toggle functionality and update styles for improved user experience
- Implement view toggle buttons for grid and list layouts with corresponding icons
- Update styles for toggle buttons to improve aesthetics and interactivity
- Add responsive adjustments for better usability on smaller screens
- Refactor JavaScript to handle view switching with smooth transitions

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -297,8 +297,14 @@
                     <h2>Invoice Summary</h2>
                   </div>
                   <div class="view-toggle">
-                    <button class="toggle-btn active">Grid</button>
-                    <button class="toggle-btn">List</button>
+                    <button class="toggle-btn active" data-view="grid">
+                      <i class="bi bi-grid-3x3"></i>
+                      <span>Grid</span>
+                    </button>
+                    <button class="toggle-btn" data-view="list">
+                      <i class="bi bi-list-ul"></i>
+                      <span>List</span>
+                    </button>
                   </div>
                 </div>
 
