feat(invoiceSummary): hide recommendations, impact summary, and dispute prediction sections
- Update invoiceSummary.html to set display style to 'none' for recommendations, impact summary, and dispute prediction sections, improving initial load visibility.
- Enhance shop.js to initialize and manage multiple DataTables for shop details, billing readiness, and invoice details, improving data presentation and user interaction.
- Refactor show functions to include parameters for better context in displaying details, enhancing user experience during navigation.

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -588,7 +588,7 @@
             </div>
 
             <!-- Recommendations Container -->
-            <div class="col-lg-12">
+            <div class="col-lg-12" style="display: none;">
               <div class="recommendations-container">
                 <div class="recommendations-header">
                   <div class="header-left">
@@ -689,7 +689,7 @@
             </div>
 
             <!-- Impact Summary -->
-            <div class="col-lg-12">
+            <div class="col-lg-12" style="display: none;">
               <div class="impact-summary">
                 <div class="impact-header">
                   <div class="header-content">
@@ -771,7 +771,7 @@
             </div>
 
             <!-- Dispute Prediction Section -->
-            <div class="col-lg-12">
+            <div class="col-lg-12" style="display: none;">
               <div class="recommendation-section">
                 <div class="section-background">
                   <div class="gradient-orb"></div>
