feat(shop): update shop table with compact layout and status badges
- Refactor shop.html to implement a compact table layout for billing readiness, enhancing data presentation and user experience.
- Replace text indicators for contract details, service visit details, billing receipt, and warranty/discount with visually distinct status badges.
- Add CSS styles for the new compact table and status badges to improve aesthetics and interactivity.
- Update JavaScript to support the new badge display and reinitialize tooltips for enhanced user guidance.

--- a/shop.html
+++ b/shop.html
@@ -352,19 +352,16 @@
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">Past Due</span>
                             <span class="status-badge danger">2</span>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">Upcoming</span>
                             <span class="status-badge warning">5</span>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">No Due</span>
                             <span class="status-badge success">20</span>
                           </div>
                         </td>
@@ -434,19 +431,16 @@
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">Past Due</span>
                             <span class="status-badge danger">0</span>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">Upcoming</span>
                             <span class="status-badge warning">3</span>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">No Due</span>
                             <span class="status-badge success">13</span>
                           </div>
                         </td>
@@ -480,19 +474,16 @@
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">Past Due</span>
                             <span class="status-badge danger">2</span>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">Upcoming</span>
                             <span class="status-badge warning">5</span>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">No Due</span>
                             <span class="status-badge success">20</span>
                           </div>
                         </td>
@@ -526,19 +517,16 @@
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">Past Due</span>
                             <span class="status-badge danger">1</span>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">Upcoming</span>
                             <span class="status-badge warning">0</span>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">No Due</span>
                             <span class="status-badge success">15</span>
                           </div>
                         </td>
@@ -566,19 +554,16 @@
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">Past Due</span>
                             <span class="status-badge danger fw-bold">3</span>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">Upcoming</span>
                             <span class="status-badge warning fw-bold">8</span>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-label">No Due</span>
                             <span class="status-badge success fw-bold">48</span>
                           </div>
                         </td>
@@ -654,15 +639,15 @@
               </button>
             </div>
             <div class="table-responsive">
-              <table class="table align-middle" id="billing-readiness-table">
+              <table class="table align-middle compact-table" id="billing-readiness-table">
                 <thead>
                   <tr>
                     <th>ESN</th>
                     <th>Shop</th>
-                    <th>Contract Details</th>
-                    <th>SV Details</th>
-                    <th>Billing Receipt</th>
-                    <th>Warranty & Discount</th>
+                    <th>Contract Details <i class="bi bi-info-circle" data-bs-toggle="tooltip" title="Contract signed and valid"></i></th>
+                    <th>SV Details <i class="bi bi-info-circle" data-bs-toggle="tooltip" title="Service Visit details complete"></i></th>
+                    <th>Billing Receipt <i class="bi bi-info-circle" data-bs-toggle="tooltip" title="Billing receipt uploaded"></i></th>
+                    <th>Warranty & Discount <i class="bi bi-info-circle" data-bs-toggle="tooltip" title="Warranty/discount status"></i></th>
                     <th>Action Recommendation</th>
                   </tr>
                 </thead>
