feat(invoiceSummary): enhance stat cards with action buttons and modal functionality
- Add action buttons to each stat card for improved interactivity and user engagement.
- Implement modal functionality to display detailed information when action buttons are clicked.
- Update CSS styles for stat cards and buttons to enhance visual appeal and responsiveness.
- Refactor JavaScript to manage modal interactions and improve user experience during invoice reviews.

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="src/css/main.css">
   <link rel="stylesheet" href="src/css/invoiceSummary.css">
+  
 </head>
 
 <body>
@@ -394,6 +395,9 @@
                       <div class="card-value">$2,752,670</div>
                       <div class="card-percentage">61.5%</div>
                     </div>
+                    <button class="card-action-btn" data-category="inscope">
+                      <i class="bi bi-arrow-right"></i>
+                    </button>
                   </div>
 
                   <div class="stat-card info">
@@ -405,6 +409,9 @@
                       <div class="card-value">$1,632,712</div>
                       <div class="card-percentage">36.5%</div>
                     </div>
+                    <button class="card-action-btn" data-category="llp">
+                      <i class="bi bi-arrow-right"></i>
+                    </button>
                   </div>
 
                   <div class="stat-card warning">
@@ -416,6 +423,9 @@
                       <div class="card-value">$16,780</div>
                       <div class="card-percentage">0.4%</div>
                     </div>
+                    <button class="card-action-btn" data-category="qec">
+                      <i class="bi bi-arrow-right"></i>
+                    </button>
                   </div>
 
                   <!-- Secondary Stats -->
@@ -428,6 +438,9 @@
                       <div class="card-value">-</div>
                       <div class="card-percentage">0%</div>
                     </div>
+                    <button class="card-action-btn" data-category="outscope">
+                      <i class="bi bi-arrow-right"></i>
+                    </button>
                   </div>
 
                   <div class="stat-card success">
@@ -439,6 +452,9 @@
                       <div class="card-value">$247</div>
                       <div class="card-percentage">0.01%</div>
                     </div>
+                    <button class="card-action-btn" data-category="missing">
+                      <i class="bi bi-arrow-right"></i>
+                    </button>
                   </div>
 
                   <div class="stat-card secondary">
@@ -450,6 +466,9 @@
                       <div class="card-value">$60,914</div>
                       <div class="card-percentage">1.4%</div>
                     </div>
+                    <button class="card-action-btn" data-category="service">
+                      <i class="bi bi-arrow-right"></i>
+                    </button>
                   </div>
 
                   <div class="stat-card primary">
@@ -461,6 +480,9 @@
                       <div class="card-value">$1,000</div>
                       <div class="card-percentage">0.02%</div>
                     </div>
+                    <button class="card-action-btn" data-category="repair">
+                      <i class="bi bi-arrow-right"></i>
+                    </button>
                   </div>
 
                   <div class="stat-card info">
@@ -472,6 +494,9 @@
                       <div class="card-value">$7,877</div>
                       <div class="card-percentage">0.2%</div>
                     </div>
+                    <button class="card-action-btn" data-category="transport">
+                      <i class="bi bi-arrow-right"></i>
+                    </button>
                   </div>
 
                   <div class="stat-card light">
@@ -483,6 +508,9 @@
                       <div class="card-value">-</div>
                       <div class="card-percentage">0%</div>
                     </div>
+                    <button class="card-action-btn" data-category="tat">
+                      <i class="bi bi-arrow-right"></i>
+                    </button>
                   </div>
                 </div>
                 <!-- Move invoice-view here -->
