refactor(invoiceSummary): improve layout and styling for clarity and consistency
- Adjust table headers in invoiceSummary.html for better separation of customer order number and notification.
- Update CSS styles in invoiceSummary.css to enhance spacing, font sizes, and overall readability.
- Refine breadcrumb styles in main.css for improved visual hierarchy and user experience.

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -587,7 +587,8 @@
                     <tr>
                       <th>Shipping Address</th>
                       <th>Billing Address</th>
-                      <th colspan="3">Customer Order No. / Notification</th>
+                      <th>Customer Order No.</th>
+                      <th colspan="2">Notification</th>
                     </tr>
                     <tr>
                       <td>
@@ -608,7 +609,8 @@
                           USA
                         </div>
                       </td>
-                      <td colspan="3">10270200</td>
+                      <td>10270200</td>
+                      <td colspan="2"></td>
                     </tr>
                     <tr>
                       <th>Payment Terms</th>
