--- a/shop.html
+++ b/shop.html
@@ -669,22 +669,71 @@
                 <i class="bi bi-arrow-left"></i> Back
               </button>
             </div>
-            <div class="table-responsive">
-              <table class="table align-middle" id="invoice-details-table">
-                <thead>
-                  <tr>
-                    <th>ESN</th>
-                    <th>Invoice Generated?</th>
-                    <th>Do you want to create Invoice?</th>
-                    <th>Do you want to get Reminder?</th>
-                    <th>Frequency?</th>
-                    <th>Action</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <!-- Populated by JS -->
-                </tbody>
-              </table>
+            
+            <div class="invoice-cards-container">
+              <!-- Invoice Status Card -->
+              <div class="invoice-card">
+                <div class="card-header">
+                  <i class="bi bi-file-earmark-check"></i>
+                  <div class="header-content">
+                    <h3>Invoice Status</h3>
+                    <p>Current invoice generation status</p>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <div class="form-group">
+                    <label>Invoice Generated?</label>
+                    <select class="form-select" id="invoiceGenerated">
+                      <option value="yes">Yes</option>
+                      <option value="no">No</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Invoice Creation Card -->
+              <div class="invoice-card">
+                <div class="card-header">
+                  <i class="bi bi-plus-circle"></i>
+                  <div class="header-content">
+                    <h3>Invoice Creation</h3>
+                    <p>Create new invoice for this service</p>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <div class="form-group">
+                    <label>Do you want to create Invoice?</label>
+                    <select class="form-select" id="createInvoice">
+                      <option value="na">NA</option>
+                      <option value="yes">Yes</option>
+                      <option value="no">No</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Action Card -->
+              <div class="invoice-card">
+                <div class="card-header">
+                  <i class="bi bi-lightning"></i>
+                  <div class="header-content">
+                    <h3>Quick Actions</h3>
+                    <p>Available actions based on current status</p>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <div class="action-buttons">
+                    <button class="btn btn-primary" id="reviewInvoiceBtn">
+                      <i class="bi bi-eye"></i>
+                      Review Invoice
+                    </button>
+                    <button class="btn btn-success" id="createInvoiceBtn" style="display: none;">
+                      <i class="bi bi-plus-circle"></i>
+                      Create Invoice
+                    </button>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
