--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -629,14 +629,14 @@
                   </table>
 
                   <!-- Cost Table -->
-                  <h3 class="section-title">T&M MFP</h3>
+                  
                   <table>
                     <colgroup>
                       <col style="width: 80%">
                       <col style="width: 20%">
                     </colgroup>
                     <tr>
-                      <th>Description</th>
+                      <th>T&M MFP</th>
                       <th class="right">Final Cost (USD)</th>
                     </tr>
                     <tr>
