style(invoiceSummary): enhance stat cards with action buttons and improved hover effects
- Update stat cards to include action buttons with new styles for better interactivity.
- Refine CSS for action buttons, including hover and active states for enhanced user experience.
- Introduce animations and visual effects for stat cards to improve aesthetics and engagement.
- Adjust layout for list view to ensure consistency and better alignment of elements.

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -387,7 +387,7 @@
                 <!-- Stats Grid -->
                 <div class="stats-grid">
                   <!-- Primary Stats -->
-                  <div class="stat-card primary">
+                  <div class="stat-card primary has-action" data-category="inscope">
                     <div class="card-icon">
                       <i class="bi bi-cash-coin"></i>
                     </div>
@@ -410,9 +410,6 @@
                       <div class="card-value">$1,632,712</div>
                       <div class="card-percentage">36.5%</div>
                     </div>
-                    <button class="card-action-btn" data-category="llp">
-                      <i class="bi bi-arrow-right"></i>
-                    </button>
                   </div>
 
                   <div class="stat-card warning">
@@ -424,9 +421,6 @@
                       <div class="card-value">$16,780</div>
                       <div class="card-percentage">0.4%</div>
                     </div>
-                    <button class="card-action-btn" data-category="qec">
-                      <i class="bi bi-arrow-right"></i>
-                    </button>
                   </div>
 
                   <!-- Secondary Stats -->
@@ -439,9 +433,6 @@
                       <div class="card-value">-</div>
                       <div class="card-percentage">0%</div>
                     </div>
-                    <button class="card-action-btn" data-category="outscope">
-                      <i class="bi bi-arrow-right"></i>
-                    </button>
                   </div>
 
                   <div class="stat-card success">
@@ -453,12 +444,9 @@
                       <div class="card-value">$247</div>
                       <div class="card-percentage">0.01%</div>
                     </div>
-                    <button class="card-action-btn" data-category="missing">
-                      <i class="bi bi-arrow-right"></i>
-                    </button>
                   </div>
 
-                  <div class="stat-card secondary">
+                  <div class="stat-card secondary has-action" data-category="service">
                     <div class="card-icon">
                       <i class="bi bi-bell"></i>
                     </div>
@@ -481,9 +469,6 @@
                       <div class="card-value">$1,000</div>
                       <div class="card-percentage">0.02%</div>
                     </div>
-                    <button class="card-action-btn" data-category="repair">
-                      <i class="bi bi-arrow-right"></i>
-                    </button>
                   </div>
 
                   <div class="stat-card info">
@@ -495,9 +480,6 @@
                       <div class="card-value">$7,877</div>
                       <div class="card-percentage">0.2%</div>
                     </div>
-                    <button class="card-action-btn" data-category="transport">
-                      <i class="bi bi-arrow-right"></i>
-                    </button>
                   </div>
 
                   <div class="stat-card light">
@@ -509,9 +491,6 @@
                       <div class="card-value">-</div>
                       <div class="card-percentage">0%</div>
                     </div>
-                    <button class="card-action-btn" data-category="tat">
-                      <i class="bi bi-arrow-right"></i>
-                    </button>
                   </div>
                 </div>
                 <!-- Move invoice-view here -->
